Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2588

Thrift compiler is not buildable in Visual Studio 2010

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.1
    • 0.9.2
    • Compiler (General)
    • None
    • Windows 7, Visual Studio 2010

    • Patch Available

    Description

      Missing t_typedef.cc reference in Visual Studio Project File (compiler.vcxproj) and a missing #include <cctype> in t_csharp_generator.cc prevent the compiler from being built through Visual Studio.

      Attachments

        Activity

          People

            jensg Jens Geyer
            ibn Thomas Lazar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: