THRIFT-2588 Thrift compiler is not buildable in Visual Studio 2010 Client: General Compiler Patch: Thomas Lazar