compiler/cpp/src/generate/t_csharp_generator.cc
@@ -27,6 +27,7 @@
 #include <fstream>
 #include <iostream>
 #include <vector>
+#include <cctype>
 
 #include <stdlib.h>
 #include <sys/stat.h>
